# learn-rpi-pico

./: Pico_Audio.7z
Pico_Audio/Pico-Audio/: CMakeLists.txt  ReadmeCN.txt  ReadmeEN.txt  main.c
Pico_Audio/Pico-Audio/lib/audio_data/: CMakeLists.txt  audio_data.c  audio_data.h
Pico_Audio/Pico-Audio/lib/audio_pio/: CMakeLists.txt  audio_pio.c  audio_pio.h
Pico_Audio/Pico-Audio/uf2/: audio_firmware.uf2
Pico_Audio/python/: Audio_PIO.py  Hardware_I2S.py  ReadmeCN.txt  ReadmeEN.txt
pio_ws2812/: CMakeLists.txt  ws2812.c
ssd1306_i2c/: CMakeLists.txt
wifi_test/: CMakeLists.txt  main.c
